src/objects/AVSFQB__Invoices__c.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__Balance__c</fullName>
        <formula>IF( AVSFQB__Payments__c &lt; 0, AVSFQB__Total_Invoice_Amount__c + AVSFQB__Payments__c, AVSFQB__Total_Invoice_Amount__c - AVSFQB__Payments__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Days_Outstanding__c</fullName>
        <description>Days Since Invoiced</description>
        <formula>IF( AVSFQB__Balance__c &lt;=0,0,
TODAY() - DATE(YEAR(AVSFQB__TxnDate__c),MONTH(AVSFQB__TxnDate__c),DAY(AVSFQB__TxnDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Invoice_Detail__c</fullName>
        <description>Invoice Detail</description>
        <label>Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Doc Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Payments__c</fullName>
        <description>Total Payments</description>
        <label>Payments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__PriceBook_Name__c</fullName>
        <label>PriceBook Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Sync_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Sync_To_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync To Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Total_Invoice_Amount__c</fullName>
        <description>Total Invoice Amount</description>
        <label>Total Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__TxnDate__c</fullName>
        <description>Due Date of the invoice</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                    <label>Invoice</label>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>SalesOrder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Class Room</fullName>
                </value>
                <value>
                    <fullName>Custom Design</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <label>Receivable</label>
    <listViews>
        <fullName>AVSFQB__All</fullName>
        <columns>NAME</columns>
        <columns>AVSFQB__Invoice_Number__c</columns>
        <columns>AVSFQB__Opportunity__c</columns>
        <columns>AVSFQB__Total_Invoice_Amount__c</columns>
        <columns>AVSFQB__Payments__c</columns>
        <columns>AVSFQB__Balance__c</columns>
        <columns>AVSFQB__Days_Outstanding__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AVSFQB__Modified_today</fullName>
        <columns>NAME</columns>
        <columns>AVSFQB__Invoice_Number__c</columns>
        <columns>AVSFQB__Opportunity__c</columns>
        <columns>AVSFQB__Balance__c</columns>
        <columns>AVSFQB__Sync_Date__c</columns>
        <columns>AVSFQB__Total_Invoice_Amount__c</columns>
        <columns>AVSFQB__Payments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Modified today</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Receivables</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receivables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>